:sparkles: feat: New route to filter people by name, role and team
